# zotero-paper-report-skill

./: .gitignore  .gitmodules  LICENSE  Optimizing cross-domain transfer for universal machine learning interatomic potentials - 文献报告.md  README.md  README_zh.md  UMA - 文献报告.md  install.sh  requirements.txt
python/: config.yaml  pyproject.toml
python/src/zotero_paper_report/: __init__.py  __main__.py  cli.py  config.py  orchestrator.py  reporter.py  subagent.py  tracker.py  zotero_reader.py
zotero-paper-report/: SKILL.md
zotero-paper-report/references/: zotero-tools-guide.md
