[project]
name = "zotero-paper-report"
version = "0.1.0"
description = "Batch literature report generation for Zotero papers via Claude Code"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
zotero-paper-report = "zotero_paper_report.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"
